--- a/src/styles/helpers.scss
+++ b/src/styles/helpers.scss
@@ -3,6 +3,10 @@
   width: 100%;
 }
 
-.color-alert {
-  color: red;
+.theday-color {
+  color: rgb(89, 184, 45);
+}
+
+.theday-cursor {
+  cursor: pointer;
 }
