--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -3,3 +3,9 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .img-wrap {
+    animation: pass-by 5s linear infinite;
+  }
+}
