--- a/src/styles/ghost.scss
+++ b/src/styles/ghost.scss
@@ -2,18 +2,17 @@
   position: fixed;
   z-index: 99;
   top: 0rem;
+  left: 0rem;
   animation: pass-by 6s linear infinite;
 }
 
 .ghost {
-  width: 220px;
+  width: 300px;
   animation: ghost-float 2.2s ease-in-out infinite;
 }
 
-
-
 @keyframes pass-by {
-  0% {transform: translate(-260px, 0rem);} 
+  0% {transform: translate(-300px - 50px, 0rem);} 
   100% {transform: translate(100vw, 6rem);}
 }
 @keyframes ghost-float {
