--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import 'vars';
 
 body {
-  // font-family: 'Roboto', sans-serif;
+  font-family: 'Crimson Text', serif;
   padding: 0;
   margin: 0;
   background-color: $main-bg;
@@ -22,7 +22,7 @@ body {
 .input-field {
   background-color: $input-bg;
   color: #fff;
-  font-size: 1.25rem;
+  font-size: 1.3rem;
   padding: 20px 0px 20px 0px;
 }
 
@@ -37,7 +37,7 @@ body {
       padding: 12px;
       margin: 0;
       border-bottom: 2px solid $input-bg;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       color: $main-color;
       &:hover:not(.header) {
         background-color: $hover-bg;
